<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    app:strokeWidth="2dp"
    app:strokeColor="@android:color/darker_gray"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        >

        <LinearLayout
            android:id="@+id/itemRecyclerLayoutImage"
            android:layout_width="172dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <ImageView
                android:id="@+id/itemRecyclerImageNews"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:contentDescription="@string/news_image"
                tools:srcCompat="@tools:sample/avatars"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                >

                <TextView
                    android:id="@+id/itemRecyclerTextSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/news_source"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:textSize="12sp"
                    />

                <TextView
                    android:id="@+id/itemRecyclerTextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:text="@string/news_date"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:textSize="12sp"
                    />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemRecyclerLayoutContent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/itemRecyclerLayoutImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <TextView
                android:id="@+id/itemRecyclerTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_title"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/itemRecyclerContentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="32dp"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                android:textSize="11sp"
                android:textStyle="normal"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>